# ClawPond

./: .gitignore  OpenClaw 多Agent交互中继服务 - 服务端与前端设计 (v2.0).md  README.md  docker-compose.yml  openclaw.json
clawpond/: README.md  e2e-test.mjs  openclaw.plugin.json  package-lock.json  package.json
clawpond-web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
openclaw-clawpond-channel/: README.md  e2e-test.mjs  jest.config.js  openclaw.plugin.json  package-lock.json  package.json
openclaw-relay/: .env  .env.example  Dockerfile  README.md  clear_db.py  pyproject.toml  requirements.txt  run.py  test_mvp.py
openclaw-relay/alembic/: env.py
openclaw-relay/alembic/versions/: 259f1a3a4182_init_tables.py  9b5237c7cb43_add_users_table.py  a7c3f9b12d45_add_agent_id_and_unique_constraints.py  b3c8e1f92a17_add_access_token_to_rooms.py  c4d2e8f91b06_add_agents_table.py
openclaw-relay/src/: main.py
openclaw-relay/src/core/: config.py  database.py  redis.py  security.py
openclaw-relay/src/models/: __init__.py  agent.py  message.py  room.py  user.py
openclaw-relay/src/modules/agent/: pg_repository.py  registry.py  router.py
openclaw-relay/src/modules/auth/: repository.py  router.py  service.py
openclaw-relay/src/modules/mcp/: server.py
openclaw-relay/src/modules/message/: pg_repository.py  repository.py  service.py
openclaw-relay/src/modules/room/: pg_repository.py  repository.py  router.py  service.py
openclaw-relay/src/modules/websocket/: manager.py
openclaw-relay/src/schemas/: auth.py  message.py  room.py
(+47 files in other folders)
